--- a/Project/index.html
+++ b/Project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Project/style.css">
     <title>Speech Text Reader</title>
 </head>
 <body>
@@ -23,6 +23,6 @@
         <main></main>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="/Project/script.js"></script>
 </body>
 </html>
